@@ -1,11 +1,10 @@
 <?php
-// $Id: simplenews_scheduler.install,v 1.2.2.3 2009/09/16 08:08:46 sgabe Exp $
+// $Id: simplenews_scheduler.install,v 1.2.2.4 2009/10/16 17:56:22 sgabe Exp $
 
 /**
  * @file
  * Install and uninstall functions for the Simplenews Scheduler module.
  */
-
 
 /**
  * Implementation of hook_install().
@@ -49,4 +48,15 @@ function simplenews_scheduler_schema() {
 function simplenews_scheduler_uninstall() {
   // Remove tables.
   drupal_uninstall_schema('simplenews_scheduler');
+}
+
+/**
+ * Implementation of hook_update_N().
+ */
+function simplenews_scheduler_update_6000() {
+  $ret = array();
+  db_add_field($ret, 'simplenews_scheduler', 'sched_stop', array('type' => 'int', 'length' => 1, 'not null' => TRUE));
+  db_add_field($ret, 'simplenews_scheduler', 'sched_stop_date', array('type' => 'int', 'length' => 11, 'not null' => TRUE, 'default' => 1577923199));
+  db_add_field($ret, 'simplenews_scheduler', 'sched_stop_edition', array('type' => 'int', 'length' => 10, 'not null' => TRUE, 'default' => 0));
+  return $ret;
 }
